Fixing up spacing

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -129,11 +129,13 @@ ul {
 header {
   grid-area: info;
   align-self: center;
-  // min-height: min-content;
   max-height: 100%;
-  // min-width: min-content;
 
-  line-height: 1.3;
+  line-height: 1.2;
+
+  h6 {
+    white-space: nowrap;
+  }
 
   .username {
     visibility: hidden;
@@ -284,6 +286,7 @@ figure {
   html, body {
     overflow: hidden;
   }
+
   body {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 5fr 1em;
@@ -295,16 +298,8 @@ figure {
   }
 
   header {
-    padding: 1vh;
-    padding-left: 5vw;
-
-    h1 {
-      // font-size: xx-large;
-    }
-
-    h6 {
-      // font-size: medium;
-    }
+    // padding: 1vh;
+    padding-left: 0.5rem;
 
     .social-media-list {
       margin-top: 5px;
@@ -329,12 +324,17 @@ figure {
       flex-flow: row;
       flex-wrap: wrap;
       justify-content: center;
+      margin: 0;
 
       li {
         font-size: 2rem;
         padding-right: 20px;
       }
     }
+  }
+
+  #content-wrapper {
+    padding: 0 2rem 0 1rem;
   }
 }
 
